--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <main>
         <div id="app" class="container-fluid">
         <div id="logopart"><a href="index.html#/home">
-            <img src="images/logo_c.svg"  alt="logo">
+          <img src="images/logo.jpeg"  alt="logo"></a>
           </a>
-          <p>Find YourSelf At Home!</p>
+          <p>Enjoy the Ontario Summer</p>
         </div>
           
           <div id="routerNav">
@@ -64,12 +64,11 @@
         </div>
 
         <div id="footerArea">
-          <div class="container" id="footerInfo">
-            <div class="row">
-              <div class="col">
-                <p>@CopyRight 2020 The Ontario Tourism Company, Inc</p>
-              </div>
-
+        <div class="container" id="footerInfo">
+        <div class="row">
+        <div class="col">
+        <p>@CopyRight 2020 The Ontario Tourism Company, Inc</p>
+        </div>
               <div class="col">
                 <ul id="socialIcon" class="float-right">
                   Follow us on social media.
@@ -77,11 +76,11 @@
                   <li><img src="images/facebook-circular-logo.svg" /></li>
                   <li><img src="images/google-plus-circular-button.svg" /></li>
                 </ul>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
+        </div>
+        </div>
+        </div>
+        </div>
     </main>
 
     <script type="text/javascript" src="js/main.js"></script>
