--- a/spots.html
+++ b/spots.html
@@ -12,8 +12,8 @@
 <body>
        <div id="app" class="container-fluid">
        <div id="logopart"><a href="index.html#/home">
-              <img src="images/logo_c.svg"  alt="logo"></a>
-              <p>Find YourSelf At Home!</p>
+              <img src="images/logo.jpeg"  alt="logo"></a>
+              <p>Enjoy the Ontario Summer</p>
        </div>
        <div id="routerNav">
               <li>
@@ -32,7 +32,114 @@
                      <h2>Find Yourself At Home</h2>
                      <a href="spots.html"><p>Join Now!</p></a>
               </div>
-              
+
+              <div id="ontraio">
+                     <h2>Beautiful Spots in Ontraio</h2>
+                     <div>
+                            <h3>Great Toronto Area</h3>
+                            <img src="images/toronto.jpg" alt="">
+                            <p>Explore Canada's largest and most exciting 
+                            urban centre with annual festivals, museums, galleries 
+                            and theatres that rival the best in the world. 
+                            Globetrot to culturally diverse neighbourhoods 
+                            with eclectic shops and restaurants serving 
+                            delectable cuisine from all corners of the world.</p>
+                     </div>
+                     <div>
+                            <h3>Ottawa and Countryside</h3>
+                            <img src="images/ottawa.jpg" alt="">
+                            <p>A relaxed urban vibe draped in natural splendour,
+                            Canada’s capital and Ontario’s second largest city is 
+                            a showcase of national sites, museums, festivals and c
+                            ulinary experiences where visitors can experience the 
+                            best of our country in one place. Ottawa's charming 
+                            countryside offers vast greenery and an abundance 
+                            of quaint shops.</p>
+                     </div>
+                     <div>
+                            <h3>Niagara Canada</h3>
+                            <img src="images/niagara.jpg" alt="">
+                            <p>Whether you’re looking for big and bold
+                            or quaint and quiet, you’ll find it in Niagara. 
+                            In addition to the thundering Falls, 
+                            you’ll discover exciting attractions, 
+                            world-class casinos, over 125 wonderful 
+                            wineries and fantastic farm-to-table cuisine, 
+                            inspired theatre and live entertainment, 
+                            as well as miles of cycling trails, the 
+                            country’s largest collection of golf courses 
+                            and sandy Great Lakes shorelines. 
+                            Pair that with 12 months of festivals 
+                            including the Winter Festival of 
+                            Lights & Niagara Icewine Festival 
+                            and special events for 365 days of 
+                            getaway inspiration.</p>
+                     </div>
+                     <div>
+                            <h3>Southwest Ontario</h3>
+                            <img src="images/southwest.jpg" alt="">
+                            <p>We love seeing the look that spreads across visitors’ faces 
+                            when they learn that the southern tip of our region 
+                            dips onto the same latitudinal plain as northern
+                            California. The expression of disbelief quickly turns 
+                            into a satisfied grin when they realize they’ve 
+                            discovered a getaway destination that offers 
+                            world-class freshwater beaches and water sports, 
+                            some of the continent’s best birding, a rapidly 
+                            evolving wine and culinary scene and the friendliest 
+                            communities on the planet.</p>
+                     </div>
+                     <div>
+                            <h3>Hamiltion, Halton, Brant</h3>
+                            <img src="images/hamiltonfalls.jpg" alt="">
+                            <p>Don't just hibernate this winter! Though the weather 
+                            outside at times may be frightful don't let it stop you 
+                            from getting out and exploring outdoors or the indoors
+                            if that's more your thing, and we’re just a short drive 
+                            from much of southern Ontario. Hamilton Halton 
+                            Brant is home to signature landscapes including the 
+                            Niagara Escarpment, the Grand River,
+                            the Bruce Trail, Lake Ontario shorelines 
+                            and a collection of more than 100 waterfalls,
+                            creating a beautiful 
+                            backdrop for wintery fun. 
+                            The area also boasts renowned heritage sites, 
+                            attractions and museums, 
+                            a vibrant arts scene, distinct downtowns and 
+                            delectable dining. Here are just a few of our 
+                            favourite winter day trip ideas.</p>
+                     </div>
+                     <div>
+                            <h3>Algonquin Park</h3>
+                            <img src="images/algonquin.jpg" alt="">
+                            <p>Explorers' Edge is home to some of Ontario's most iconic 
+                            travel destinations as well as vast expanses of stunning 
+                            natural landscapes. With outdoor adventure, golf, c
+                            ulinary and artisan cultures thriving across the entire region, 
+                            there’s something to delight every traveller. From upscale 
+                            accommodations to the best camping in the world, 
+                            from one-of-a-kind attractions to completely unique 
+                            events, your next great touring adventure begins here.</p>
+                     </div>
+              </div>
+              <div id="footerArea">
+              <div class="container" id="footerInfo">
+              <div class="row">
+              <div class="col">
+              <p>@CopyRight 2020 The Ontario Tourism Company, Inc</p>
+              </div>
+                     <div class="col">
+                            <ul id="socialIcon" class="float-right">
+                                   Follow us on social media.
+                                   <li><img src="images/twitter-circular-button.svg" /></li>
+                                   <li><img src="images/facebook-circular-logo.svg" /></li>
+                                   <li><img src="images/google-plus-circular-button.svg" /></li>
+                            </ul>
+                     </div>
+              </div>
+              </div>
+              </div>
+
        </div>
        <script type="text/javascript" src="js/main.js"></script>
 </body>
