--- a/home.html
+++ b/home.html
@@ -4,7 +4,10 @@
                 <meta charset="utf-8">
                 <link rel="stylesheet" type="text/css" href="css/main.css">
                 <link rel="stylesheet" type="text/css" href="css/main2.css">
+                <link href="https://fonts.googleapis.com/css?family=Saira&display=swap" rel="stylesheet">
                 <title>midterm</title>
+                <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+                <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
                 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.22/dist/vue.js"></script>
                   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.0.2/vue-router.min.js"></script>
