--- a/spots.html
+++ b/spots.html
@@ -2,6 +2,9 @@
 <html lang="en">
        <head>
               <meta charset="utf-8">
+              <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+              <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+              <link href="https://fonts.googleapis.com/css?family=Saira&display=swap" rel="stylesheet">
               <link rel="stylesheet" type="text/css" href="css/main.css">
               <link rel="stylesheet" type="text/css" href="css/main2.css">
               <title>midterm</title>
@@ -34,16 +37,26 @@
               </div>
 
               <div id="ontraio">
-                     <h2>Beautiful Spots in Ontraio</h2>
+                     <div id="firstonp">                  
                      <div>
-                            <h3>Great Toronto Area</h3>
-                            <img src="images/toronto.jpg" alt="">
-                            <p>Explore Canada's largest and most exciting 
-                            urban centre with annual festivals, museums, galleries 
-                            and theatres that rival the best in the world. 
-                            Globetrot to culturally diverse neighbourhoods 
-                            with eclectic shops and restaurants serving 
-                            delectable cuisine from all corners of the world.</p>
+                     <h3>Hamiltion, Halton, Brant</h3>
+                     <img src="images/hamiltonfalls.jpg" alt="">
+                     <p>Don't just hibernate this winter! Though the weather 
+                     outside at times may be frightful don't let it stop you 
+                     from getting out and exploring outdoors or the indoors
+                     if that's more your thing, and we’re just a short drive 
+                     from much of southern Ontario. Hamilton Halton 
+                     Brant is home to signature landscapes including the 
+                     Niagara Escarpment, the Grand River,
+                     the Bruce Trail, Lake Ontario shorelines 
+                     and a collection of more than 100 waterfalls,
+                     creating a beautiful 
+                     backdrop for wintery fun. 
+                     The area also boasts renowned heritage sites, 
+                     attractions and museums, 
+                     a vibrant arts scene, distinct downtowns and 
+                     delectable dining. Here are just a few of our 
+                     favourite winter day trip ideas.</p>
                      </div>
                      <div>
                             <h3>Ottawa and Countryside</h3>
@@ -74,7 +87,8 @@
                             Lights & Niagara Icewine Festival 
                             and special events for 365 days of 
                             getaway inspiration.</p>
-                     </div>
+                     </div></div>
+                     <div id="secondonp">
                      <div>
                             <h3>Southwest Ontario</h3>
                             <img src="images/southwest.jpg" alt="">
@@ -89,26 +103,16 @@
                             evolving wine and culinary scene and the friendliest 
                             communities on the planet.</p>
                      </div>
-                     <div>
-                            <h3>Hamiltion, Halton, Brant</h3>
-                            <img src="images/hamiltonfalls.jpg" alt="">
-                            <p>Don't just hibernate this winter! Though the weather 
-                            outside at times may be frightful don't let it stop you 
-                            from getting out and exploring outdoors or the indoors
-                            if that's more your thing, and we’re just a short drive 
-                            from much of southern Ontario. Hamilton Halton 
-                            Brant is home to signature landscapes including the 
-                            Niagara Escarpment, the Grand River,
-                            the Bruce Trail, Lake Ontario shorelines 
-                            and a collection of more than 100 waterfalls,
-                            creating a beautiful 
-                            backdrop for wintery fun. 
-                            The area also boasts renowned heritage sites, 
-                            attractions and museums, 
-                            a vibrant arts scene, distinct downtowns and 
-                            delectable dining. Here are just a few of our 
-                            favourite winter day trip ideas.</p>
-                     </div>
+              <div>
+              <h3>Great Toronto Area</h3>
+              <img src="images/toronto.jpg" alt="">
+              <p>Explore Canada's largest and most exciting 
+              urban centre with annual festivals, museums, galleries 
+              and theatres that rival the best in the world. 
+              Globetrot to culturally diverse neighbourhoods 
+              with eclectic shops and restaurants serving 
+              delectable cuisine from all corners of the world.</p>
+       </div>
                      <div>
                             <h3>Algonquin Park</h3>
                             <img src="images/algonquin.jpg" alt="">
@@ -120,7 +124,7 @@
                             accommodations to the best camping in the world, 
                             from one-of-a-kind attractions to completely unique 
                             events, your next great touring adventure begins here.</p>
-                     </div>
+                     </div></div>
               </div>
               <div id="footerArea">
               <div class="container" id="footerInfo">
